--- a/_index.html
+++ b/_index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="style.css" media="screen" />
 	</head>
 	<body>
-		<h1 class="title">Hello welcome to my beautiful <b>websike</b>.</h1>
+		<h1 class="title">Hello welcome to my beautiful <b>websike</b></h1>
 		<p>
 		<a href="https://search.brave.com" target="_blank">This is the google homepage</a>
 		</p>
